--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" type="text/css" href="./static/bootstrap-4.1.0-dist/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="./static/font.css" />
     <title>イカブキケンサク</title>
+    <style type="text/css">
+      html {
+        min-width: 100%
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
